fork join and gaurd

--- a/src/app/component/test/test.component.html
+++ b/src/app/component/test/test.component.html
@@ -1,3 +1,5 @@
 <button (click)="test()">Check</button>
 
 <h1 class="alert-danger">{{ message }}</h1>
+
+<button (click)="setUser()">SetUser</button>
